--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/pro-layout": "^6.2.5",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "and": "^0.0.3",
+    "babel-plugin-import": "^1.13.0",
+    "less": "^3.12.2",
     "next": "9.4.4",
+    "next-compose-plugins": "^2.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.24",
     "@types/react": "^16.9.43",
-    "typescript": "^3.9.7"
+    "less": "^3.9.0",
+    "less-vars-to-js": "^1.3.0",
+    "null-loader": "^3.0.0",
+    "typescript": "^3.9.7",
+    "webpack-filter-warnings-plugin": "^1.2.1"
   }
 }
